# SpatialAgent

./: .gitignore  LICENSE.txt  README.md  main.ipynb  setup_env.sh
data/: cell_type_ontology.json  czi_census_datasets_v4_short.csv
docs/: architecture.md  hooks.md  local_retrieval.md  tool_retrieval_evaluation.md
local_llm/vllm/: setup.sh
notebooks/: README.md
notebooks/demos/: cell_cell_communication.ipynb  panel_design.ipynb
resource/: requirements.txt
resource/utag/: README.md  pyproject.toml
resource/utag/utag/: _version.py  types.py
spatialagent/: __init__.py
spatialagent/agent/: make_llm.py  make_prompt.py  skills.py  spatialagent.py  tool_system.py  utils.py
spatialagent/skill/: annotation.md  spatial_deconvolution.md
spatialagent/tool/: __init__.py  analytics.py  databases.py  interpretation.py  subagent.py
